# melomatch

./: .pre-commit-config.yaml  README.md  docker-compose.yml  manage.py  pyproject.toml
melomatch/: asgi.py  celery.py  debug.py  settings.py  urls.py  wsgi.py
users/: enums.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_track_user_tracks_alter_user_sex.py  0003_alter_user_sex.py  0004_user_is_active_link_user_is_public.py  0005_alter_user_avatar_alter_user_birthday_and_more.py  0005_alter_user_yandex_id.py  0006_refresh_token.py  0007_alter_token_unique_together.py  0008_merge_20240503_0423.py  0009_alter_user_yandex_id.py  0010_alter_user_options.py
users/templates/users/: privacy.html  profile.html  search.html
web/: enums.py  mappings.py  models.py  permissions.py  services.py  tasks.py  urls.py  views.py
web/management/commands/: addmusicgenres.py  genres-yandex.json
web/migrations/: 0001_initial.py  0002_remove_track_genres_track_genre_alter_artist_avatar_and_more.py  0003_alter_artist_yandex_id_alter_track_yandex_id.py  0004_alter_track_genre_alter_track_release_date.py
web/serivces/: compare_tastes.py
web/services/: __init__.py  compare_taste.py  model_instances_machinations.py  yandex_preparers.py
web/static/web/css/: base.css  compare_taste.css  instruction.css  landing.css  my_top.css  request.css  top_list.css
web/static/web/js/: collapsible_init.js  compare_taste.js  landing_scroll.js  navbar_collapse.js  notification_delete.js  tab_switch.js  theme_switch.js  top_switch.js
web/templates/web/: base.html
web/templates/web/includes/: avatar_256x256.html  avatar_circle.html  base_form.html  messages.html  navbar.html  pagination.html  tab.html  yandex_button.html
web/templates/web/pages/: base.html  compare_taste.html  instruction.html  landing.html  my_top.html  request.html  top_list.html
web/templatetags/: web.py
web/utils/: modelml.py
