[tool.poetry]
name = "melomatch"
version = "0.1.0"
description = ""
authors = [
    "Vitaly Zorin <addefan@mail.ru>",
    "Amir Dianov <amirdianov@gmail.com>",
    "DashaVed <dasha.ved93@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
