[tool.poetry]
name = "melomatch"
version = "0.1.0"
description = ""
authors = [
    "Vitaly Zorin <addefan@mail.ru>",
    "Amir Dianov <amirdianov@gmail.com>",
    "DashaVed <dasha.ved93@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.1"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["F", "E", "W", "C90", "I", "N", "UP", "ANN", "ASYNC", "S", "BLE", "B", "A", "COM", "C4",
    "DJ", "EM", "FA", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM",
    "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PGH", "PL", "TRY", "FLY", "PERF", "LOG", "RUF"]

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true

[pycodestyle]
max-line-length = 120