[tool.poetry]
name = "melomatch"
version = "0.1.0"
description = ""
authors = [
    "Vitaly Zorin <addefan@mail.ru>",
    "Amir Dianov <amirdianov@gmail.com>",
    "DashaVed <dasha.ved93@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
ua-parser = "^0.18.0"
djlint = "^1.34.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.1"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["F", "E", "W", "C90", "I", "N", "UP", "ANN", "ASYNC", "S", "BLE", "B", "A", "COM", "C4",
    "DJ", "EM", "FA", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM",
    "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PGH", "PL", "TRY", "FLY", "PERF", "LOG", "RUF"]
ignore = ["RUF001", "RUF012", "COM812"]

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true

[tool.djlint]
blank_line_after_tag="load,extends"
format_attribute_template_tags=true
format_css=true
format_js=true
indent=2
max_line_length = 80
profile="django"
use_gitignore=true

[tool.djlint.css]
indent_size=2

[tool.djlint.js]
indent_size=2

[pycodestyle]
max-line-length = 120